# plugin-test

./: cabal.project  default.nix  test.sh
nix/: sources.json
plugin/: plugin.cabal
plugin/src/: Plugin.hs
use-case/: hie.yaml  use-case.cabal
use-case/src/: Ref.hs  TH.hs  Use.hs
